--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -152,6 +152,7 @@
     <Reference Include="System.Activities" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -236,8 +237,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IsmailTask.cs" />
+    <Compile Include="ITask.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RabihTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.CDR.Data.SQL\TOne.CDR.Data.SQL.csproj">
@@ -289,6 +299,11 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
