--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -237,7 +237,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HaSSanTask.cs" />
+    <Compile Include="Tasks\HaSSanTask.cs" />
     <Compile Include="IsmailTask.cs" />
     <Compile Include="ITask.cs" />
     <Compile Include="MainForm.cs">
@@ -249,6 +249,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabihTask.cs" />
+    <Compile Include="Tasks\ZeinabTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.CDR.Data.SQL\TOne.CDR.Data.SQL.csproj">
