--- a/Vanrise/Code/Vanrise.Data.SQL/Vanrise.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Data.SQL/Vanrise.Data.SQL.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseSQLDataManager.cs" />
+    <Compile Include="BulkInsertInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
