--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -238,7 +238,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Tasks\HaSSanTask.cs" />
-    <Compile Include="IsmailTask.cs" />
+    <Compile Include="Tasks\IsmailTask.cs" />
     <Compile Include="ITask.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -249,6 +249,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabihTask.cs" />
+    <Compile Include="Tasks\MustaphaTask.cs" />
     <Compile Include="Tasks\ZeinabTask.cs" />
   </ItemGroup>
   <ItemGroup>
