--- a/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtCodeMap.cs" />
     <Compile Include="ProtPricingGenerator.cs" />
+    <Compile Include="SharedQueueManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TABS\TABS.csproj">
