--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -99,6 +99,7 @@
     <Compile Include="CodeTree.cs" />
     <Compile Include="IBulkTableService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TOneQueue.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
