--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -253,6 +253,14 @@
     <Compile Include="Tasks\ZeinabTask.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TABS\TABS.csproj">
+      <Project>{53916714-c501-4613-907f-d5f33b78c3f0}</Project>
+      <Name>TABS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.Business\TOne.Business.csproj">
+      <Project>{cab55227-6fda-4012-8a59-168ad30f96d2}</Project>
+      <Name>TOne.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.CDR.Data.SQL\TOne.CDR.Data.SQL.csproj">
       <Project>{a8389de1-6f10-470d-8364-cba3a3f14286}</Project>
       <Name>TOne.CDR.Data.SQL</Name>
