Create GetCDRsPerSwitch Activity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20240

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
@@ -48,6 +48,7 @@
     <Compile Include="TimeRange.cs" />
     <Compile Include="TimeRangeRepricingProcessInput.cs" />
     <Compile Include="TimeRangeRepricingProcessOutput.cs" />
+    <Compile Include="CDRProcessInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
