--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -65,6 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependentAsyncActivity.cs" />
     <Compile Include="Entities\CDRManager.cs" />
     <Compile Include="ClearTimeRangeBillingRecords.cs" />
     <Compile Include="CreateBillingAndStatsTables.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Entities\CDRBatchProcessor.cs" />
     <Compile Include="Entities\CDRProcessingTasksStatus.cs" />
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
+    <Compile Include="GetCDRsPerSwitch.cs" />
     <Compile Include="InitializeObjects.cs" />
     <Compile Include="LoadCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
