--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -77,6 +77,7 @@
     <Compile Include="InitializeObjects.cs" />
     <Compile Include="LoadCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveCDRsToQueue.cs" />
     <Compile Include="UpdateBillingStatistics.cs" />
     <Compile Include="UpdateDailyPostpaidAmounts.cs" />
     <Compile Include="UpdateDailyPrepaidAmounts.cs" />
@@ -115,10 +116,6 @@
     <ProjectReference Include="..\TOne.Entities\TOne.Entities.csproj">
       <Project>{60da66bd-017d-43a2-82dc-ed7db8751d23}</Project>
       <Name>TOne.Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TOne.LCRProcess.Arguments\TOne.LCRProcess.Arguments.csproj">
-      <Project>{e875395b-f198-4c06-9c10-1fed1450c7d7}</Project>
-      <Name>TOne.LCRProcess.Arguments</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
