--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Entities\CDRBatchProcessor.cs" />
     <Compile Include="Entities\CDRProcessingTasksStatus.cs" />
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
-    <Compile Include="GetCDRsPerSwitch.cs" />
+    <Compile Include="GetCDRs.cs" />
     <Compile Include="InitializeObjects.cs" />
     <Compile Include="LoadCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
