Added Console Tracking
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20252

--- a/BusinessProcess/Code/Vanrise.BusinessProcess/Vanrise.BusinessProcess.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess/Vanrise.BusinessProcess.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Base Classes\AsyncActivityHandle.cs" />
     <Compile Include="Base Classes\BaseAsyncActivity.cs" />
     <Compile Include="Base Classes\DependentAsyncActivity.cs" />
+    <Compile Include="Internals\ConsoleTracking.cs" />
     <Compile Include="ContextExtensions.cs" />
     <Compile Include="Internals\BPService.cs" />
     <Compile Include="Internals\IBPService.cs" />
