Cdr Import Generate Billing Cdrs
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20253

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -65,6 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\CDRBase.cs" />
     <Compile Include="Entities\CDRManager.cs" />
     <Compile Include="ClearTimeRangeBillingRecords.cs" />
     <Compile Include="CreateBillingAndStatsTables.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Entities\CDRBatchProcessor.cs" />
     <Compile Include="Entities\CDRProcessingTasksStatus.cs" />
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
+    <Compile Include="GenerateBillingCDRs.cs" />
     <Compile Include="GetCDRs.cs" />
     <Compile Include="InitializeObjects.cs" />
     <Compile Include="LoadCDRs.cs" />
