--- a/TOneV2/Code/TOneV2/TOne.LCRProcess.Arguments/TOne.LCRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess.Arguments/TOne.LCRProcess.Arguments.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateCodeZoneMatchProcessInput.cs" />
+    <Compile Include="UpdateZoneRateProcessInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
