--- a/BusinessProcess/Code/Vanrise.BusinessProcess.WFActivities/Vanrise.BusinessProcess.WFActivities.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.WFActivities/Vanrise.BusinessProcess.WFActivities.csproj
@@ -64,6 +64,7 @@
     <Compile Include="GetDefinitionObjectState.cs" />
     <Compile Include="ParallelForEach.cs" />
     <Compile Include="SaveDefinitionObjectState.cs" />
+    <Compile Include="SplitListIntoGroups.cs" />
     <Compile Include="WriteTrackingMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveCacheManager.cs" />
