--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -20,9 +20,9 @@
 
   <connectionStrings>
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
-    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>-->
+    <add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
-    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=ToneDevTest01;User ID=Development;Password=dev!123"/>
+    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=ToneDevTest01;User ID=Development;Password=dev!123"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=ToneDevTest01;User ID=Development;Password=dev!123"/>
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
