Add Activity PrepareMainCDRsForDBApply
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20311

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -74,8 +74,8 @@
     <Compile Include="DivideDayIntoTimeRanges.cs" />
     <Compile Include="Entities\CDRBatch.cs" />
     <Compile Include="Entities\CDRBatchProcessor.cs" />
-    <Compile Include="Entities\CDRProcessingTasksStatus.cs" />
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
+    <Compile Include="PrepareMainCDRsForDBApply.cs" />
     <Compile Include="ProcessCDRs.cs" />
     <Compile Include="GetCDRs.cs" />
     <Compile Include="InitializeObjects.cs" />
