--- a/TOneV2/Code/TOneV2/TOne.CDRProcess/TOne.CDRProcess.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess/TOne.CDRProcess.csproj
@@ -70,6 +70,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CDRImportProcess.cs" />
     <Compile Include="DailyRepricingProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeRangeRepricingProcess.cs" />
