--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -65,6 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplyMainCDRsToDB.cs" />
     <Compile Include="Entities\CDRBillingBatch.cs" />
     <Compile Include="Entities\CDRInvalidBatch.cs" />
     <Compile Include="Entities\CDRMainBatch.cs" />
