Adding CarrierInfo Class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20339

--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Compile Include="AsyncActivityStatus.cs" />
     <Compile Include="CacheObjectType.cs" />
+    <Compile Include="CarrierInfo.cs" />
     <Compile Include="CodeList.cs" />
     <Compile Include="CodeNode.cs" />
     <Compile Include="CodeTree.cs" />
