--- a/TOneV2/Code/TOneV2/TOne.Web.Online/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web.Online/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=ToneDevTest01;User ID=Development;Password=dev!123" />
+    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=WebAPITest;User ID=Development;Password=dev!123" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
