--- a/FZero/Vanrise.CommonLibrary/Vanrise.CommonLibrary.csproj
+++ b/FZero/Vanrise.CommonLibrary/Vanrise.CommonLibrary.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A0A85889-CED2-4DE6-BDA9-FEF2C10EB564}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CommonLibrary</RootNamespace>
-    <AssemblyName>CommonLibrary</AssemblyName>
+    <RootNamespace>Vanrise.CommonLibrary</RootNamespace>
+    <AssemblyName>Vanrise.CommonLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
