--- a/FZero/Vanrise.Fzero.CDRAnalysis/App.Config
+++ b/FZero/Vanrise.Fzero.CDRAnalysis/App.Config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.118.2;initial catalog=CDRAnalysis;user id=sa;password=iraq@cce$$1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/NormalizationModel.csdl|res://*/NormalizationModel.ssdl|res://*/NormalizationModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.118.2;initial catalog=CDRAnalysis;user id=sa;password=iraq@cce$$1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.118.2;Initial Catalog=CDRAnalysis;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
