git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20391

--- a/FZero/Vanrise.Fzero.CDRAnalysis/Vanrise.Fzero.CDRAnalysis.csproj
+++ b/FZero/Vanrise.Fzero.CDRAnalysis/Vanrise.Fzero.CDRAnalysis.csproj
@@ -152,7 +152,7 @@
       <DependentUpon>NormalizationModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Classes\CallsStatistics.cs" />
-    <Compile Include="CallsNormalizationEntities.cs" />
+    <Compile Include="Entities.cs" />
     <Compile Include="Classes\Constants.cs" />
     <Compile Include="NormalizationModel.Context.cs">
       <AutoGen>True</AutoGen>
