--- a/FZero/Vanrise.Fzero.CDRAnalysis.Website/Web.config
+++ b/FZero/Vanrise.Fzero.CDRAnalysis.Website/Web.config
@@ -24,7 +24,7 @@
     <pages theme="skins" />
   </system.web>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/NormalizationModel.csdl|res://*/NormalizationModel.ssdl|res://*/NormalizationModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.118.2;initial catalog=CDRAnalysis;user id=sa;password=iraq@cce$$1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.118.2;initial catalog=CDRAnalysis;user id=sa;password=iraq@cce$$1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.118.2;Initial Catalog=CDRAnalysis;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
