git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20395

--- a/FZero/Vanrise.Fzero.CDRAnalysis/App.Config
+++ b/FZero/Vanrise.Fzero.CDRAnalysis/App.Config
@@ -6,6 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.118.2;initial catalog=CDRAnalysis;user id=sa;password=iraq@cce$$1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.118.2;Initial Catalog=CDRAnalysis;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
