--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncActivityStatus.cs" />
+    <Compile Include="AuthenticationOutput.cs" />
     <Compile Include="CacheObjectType.cs" />
     <Compile Include="CarrierInfo.cs" />
     <Compile Include="CodeList.cs" />
@@ -102,6 +103,7 @@
     <Compile Include="IBulkTableService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TOneQueue.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
