--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
@@ -49,6 +49,7 @@
     <Compile Include="TimeRangeRepricingProcessInput.cs" />
     <Compile Include="TimeRangeRepricingProcessOutput.cs" />
     <Compile Include="CDRImportProcessInput.cs" />
+    <Compile Include="UpdateBillingPricingProcessInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
