--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -163,6 +163,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Resources\DLLs\TABS.Addons.AlcatelSwitchLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="TABS.Addons.EricssonEIN3_1ProxyLibrary">
+      <HintPath>..\Resources\DLLs\TABS.Addons.EricssonEIN3_1ProxyLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="TABS.Addons.EricssonSwitchLibrary">
+      <HintPath>..\Resources\DLLs\TABS.Addons.EricssonSwitchLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="TABS.Addons.MvtsProRadiusMultipleQueueProxyLibrary, Version=1.0.5445.31658, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Resources\DLLs\TABS.Addons.MvtsProRadiusMultipleQueueProxyLibrary.dll</HintPath>
@@ -237,7 +243,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tasks\ABaghdadiTask.cs" />
     <Compile Include="Tasks\HaSSanTask.cs" />
     <Compile Include="Tasks\IsmailTask.cs" />
     <Compile Include="ITask.cs" />
