--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -243,6 +243,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tasks\ABaghdadiTask.cs" />
     <Compile Include="Tasks\HaSSanTask.cs" />
     <Compile Include="Tasks\IsmailTask.cs" />
     <Compile Include="ITask.cs" />
