deleting the object User in Tone.Entity and use the User object from SecurityEssential Dll, changing the connection string, adding properties to SecurityToken Class in TOne.Web.Online.Models, adding new controller(MobileAppController) adding new class (MobileAppConfig) with property UserDisplayName and adding nhibernate dll to some projects
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20417

--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -75,6 +75,12 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NHibernate">
+      <HintPath>..\Resources\DLLs\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="SecurityEssentials">
+      <HintPath>..\Resources\DLLs\SecurityEssentials.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -103,7 +109,6 @@
     <Compile Include="IBulkTableService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TOneQueue.cs" />
-    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
