add missing reference
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20418

--- a/TOneV2/Code/TOneV2/Resources/Resources.csproj
+++ b/TOneV2/Code/TOneV2/Resources/Resources.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DLLs\antlr.runtime.dll" />
+    <Content Include="DLLs\Castle.DynamicProxy.dll" />
     <Content Include="DLLs\ICSharpCode.SharpZipLib.dll" />
     <Content Include="DLLs\Iesi.Collections.dll" />
     <Content Include="DLLs\Interop.xlsgen.dll" />
