--- a/FZero/Vanrise.Fzero.CDRAnalysis/Vanrise.Fzero.CDRAnalysis.csproj
+++ b/FZero/Vanrise.Fzero.CDRAnalysis/Vanrise.Fzero.CDRAnalysis.csproj
@@ -56,7 +56,6 @@
     <Compile Include="CDR.cs">
       <DependentUpon>NormalizationModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Classes\SourceKind.cs" />
     <Compile Include="Classes\EmailReceiverType.cs" />
     <Compile Include="Classes\CDR.cs" />
     <Compile Include="Classes\Import.cs" />
@@ -69,7 +68,6 @@
     <Compile Include="Classes\ReportingStatus.cs" />
     <Compile Include="Classes\Enums.cs" />
     <Compile Include="Classes\Permission.cs" />
-    <Compile Include="Classes\Source.cs" />
     <Compile Include="Classes\SourceMapping.cs" />
     <Compile Include="Classes\User.cs" />
     <Compile Include="Classes\UserPermission.cs" />
@@ -148,6 +146,9 @@
     <Compile Include="prGetEmails_Result.cs">
       <DependentUpon>NormalizationModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="prImportfromSwitches_Result.cs">
+      <DependentUpon>NormalizationModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="profiletest.cs">
       <DependentUpon>NormalizationModel.tt</DependentUpon>
     </Compile>
@@ -206,12 +207,6 @@
       <DependentUpon>NormalizationModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ReportingStatu.cs">
-      <DependentUpon>NormalizationModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Source.cs">
-      <DependentUpon>NormalizationModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SourceKind.cs">
       <DependentUpon>NormalizationModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SourceMapping.cs">
