--- a/BusinessProcess/Code/Vanrise.Queueing.Data/Vanrise.Queueing.Data.csproj
+++ b/BusinessProcess/Code/Vanrise.Queueing.Data/Vanrise.Queueing.Data.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="IDataManager.cs" />
     <Compile Include="IQueueDataManager.cs" />
-    <Compile Include="IQueueItemHeaderDataManager.cs" />
+    <Compile Include="IQueueItemDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QDataManagerFactory.cs" />
   </ItemGroup>
