--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -112,6 +112,7 @@
     <Compile Include="CodeTree.cs" />
     <Compile Include="IBulkTableService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueName.cs" />
     <Compile Include="TOneQueue.cs" />
   </ItemGroup>
   <ItemGroup>
