--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -26,6 +26,7 @@
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=Mmokdad;User ID=Development;Password=dev!123"/>
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
+     <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
     <add name="WFPersistence" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFPersistence;Data Source=."/>
   </connectionStrings>
@@ -157,6 +158,9 @@
     <add key="RepricingTo" value="2014-07-07"/>-->
     <add key="RepricingFrom" value="2014-03-01"/>
     <add key="RepricingTo" value="2014-03-01"/>
+    <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
   </appSettings>
   <system.codedom>
     <compilers>
