Added Logger and RuntimeHost and Service
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20560

--- a/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
+++ b/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
@@ -64,6 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compressor.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="LoggerFactory.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="ObjectFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
