--- a/Vanrise/Code/Vanrise.Runtime/Vanrise.Runtime.csproj
+++ b/Vanrise/Code/Vanrise.Runtime/Vanrise.Runtime.csproj
@@ -45,8 +45,14 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningProcessManager.cs" />
+    <Compile Include="RuntimeHost.cs" />
+    <Compile Include="RuntimeService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
+      <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
+      <Name>Vanrise.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Runtime.Data\Vanrise.Runtime.Data.csproj">
       <Project>{2b79fccf-afbe-43f2-9ddc-3a91f5ff2489}</Project>
       <Name>Vanrise.Runtime.Data</Name>
