Introducing Hussein task
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20573

--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -245,6 +245,7 @@
   <ItemGroup>
     <Compile Include="Tasks\ABaghdadiTask.cs" />
     <Compile Include="Tasks\HaSSanTask.cs" />
+    <Compile Include="Tasks\HusseinTask.cs" />
     <Compile Include="Tasks\IsmailTask.cs" />
     <Compile Include="ITask.cs" />
     <Compile Include="MainForm.cs">
